Fix: Dark mode background made darker

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ a {
 } */
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #262626;
+    background-color: #000000;
     color: #f5f3ef;
   }
   a {
